# purple-eventc

./: .gitignore  CNAME  Makefile.am  configure.ac  index.html  meson.build
include/: purple-custom.h
po/: POTFILES.in  POTFILES.skip  fr.po
src/: callbacks.vala  eventc.vala  plugin.c  purple-eventc.sym  ui.vala  utils.vala
vapi/: config.vapi  purple-custom.vapi
